# setupmeta

./: .coveragerc  .gitignore  .travis.yml  AGENTS.md  COMMANDS.rst  CONTRIBUTE.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Pipfile  README.md  README.rst  REFERENCE.rst  VERSIONING.rst  alternative-way.rst  classifiers.txt  get-setupmeta  pyproject.toml  setup.cfg  setup.py  setupmeta.py  tox.ini
.github/workflows/: publish.yml  release.yml  tests.yml  validate.yml
docs/: commands.rst  contributing.rst  pep-440.rst  requirements.rst  versioning.rst
examples/: README.rst  refresh.py
examples/complex/: README  classifiers.txt  expected.txt  setup.py
examples/direct/: LICENSE.txt  README.rst  classifiers.txt  entry_points.ini  expected.txt  requirements.txt  setup.py
examples/empty/: README  README.md  README.rst  empty.py  expected.txt  setup.py
examples/hierarchical/: README.rst  entry_points.ini  expected.txt  requirements.txt  setup.py
examples/simple/: Pipfile  README.rst  entry_points.ini  expected.txt  requirements.txt  setup.py  simple.py
examples/single/: README.rst  expected.txt  setup.py  single.py
setupmeta/: __init__.py  commands.py  content.py  hook.py  license.py  model.py  scm.py  toml.py  versioning.py
tests/: __init__.py  conftest.py  mock-twine  refresh.py  requirements.txt  scenarios.py  test_commands.py  test_content.py  test_examples.py  test_explain.py  test_license.py  test_model.py  test_resilience.py  test_scenarios.py  test_scm.py  test_setup_py.py  test_toml.py  test_upgrade.py  test_versioning.py  test_wheel.py
(+109 files in other folders)
